fix: increase badge base font size for improved readability

--- a/src/main/webapp/uii/templatePG/css/src/components/_badges.scss
+++ b/src/main/webapp/uii/templatePG/css/src/components/_badges.scss
@@ -5,7 +5,7 @@
 // default color (applied if no other color is defined)
 .badge {
     color: var(--clr-neutral-400);
-    font-size: var(--fs-200, 0.5rem);
+    font-size: var(--fs-400, 0.75rem);
   }
 
   button.badge,
